--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class='answerList'></div>
         <!-- Answer Page -->
         <div id=message></div>
+        <div id=image></div>
         <div id=correctedAnswer></div>
         <div id=gif></div>
         <!-- Scoreboard -->
